--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
   --button-disabled: #968f8c;
   --primary: #01894d;
 }
+.login__box,
+.login__saml-separator>spa {
+    background-color: #fffff04f;
+}
 .sidebar,
 .nav-bar {
     background: #232428;
