--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 .login__box,
 .login__saml-separator>spa {
-    background-color: #fffff04f;
+    background-color: #2b2b2b85;
 }
 .theme-light .sliding-panel__header,
 .sliding-panel__header,
@@ -158,6 +158,9 @@ body {
 .login-logout-button {
     color: #1fbdd0!important;
 }
+.login {
+    background: linear-gradient(to top left, rgb(0 0 0 / 80%) 0%, rgb(80 81 93 / 80%) 100%),url(assets/images/stars.gif);
+}
 @media screen and (max-width: 1024px) {
     .applications-list {
         padding: 0 10px;
@@ -165,6 +168,10 @@ body {
         
     .white-box, .tabs__content {
         margin: auto 10px;
+    }
+
+    .login__box {
+        width: 100%;
     }
 }
 @media screen and (max-width: 670px) {
@@ -174,5 +181,9 @@ body {
     .small-6 {
         flex: 0 0 100%;
         max-width: 100%;
+    }
+
+    .login__box {
+        width: 100%;
     }
 }
